--- a/cleaning_notebooks/1_clean_actor_categ.ipynb
+++ b/cleaning_notebooks/1_clean_actor_categ.ipynb
@@ -519,6 +519,16 @@
   {
    "cell_type": "code",
    "execution_count": 15,
+   "id": "dec8b275",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df2 = df2.drop('last_update', axis=1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
    "id": "79b25678",
    "metadata": {},
    "outputs": [],
