--- a/cleaning_notebooks/4_clean_rental.ipynb
+++ b/cleaning_notebooks/4_clean_rental.ipynb
@@ -19,7 +19,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 10,
    "id": "bf9a1446",
    "metadata": {},
    "outputs": [
@@ -124,7 +124,7 @@
        "4  2005-06-02 04:33:21         1  2006-02-15 21:30:53  "
       ]
      },
-     "execution_count": 2,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -176,7 +176,7 @@
    "outputs": [],
    "source": [
     "# Reorganizar las columnas en el nuevo orden\n",
-    "df = df[['rental_id', 'rental_year', 'rental_month', 'rental_day', 'inventory_id', 'customer_id', 'staff_id', 'return_year', 'return_month', 'return_day', 'last_update']]"
+    "df = df[['rental_id', 'rental_year', 'rental_month', 'rental_day', 'inventory_id', 'customer_id', 'staff_id', 'return_year', 'return_month', 'return_day']]"
    ]
   },
   {
@@ -216,7 +216,6 @@
        "      <th>return_year</th>\n",
        "      <th>return_month</th>\n",
        "      <th>return_day</th>\n",
-       "      <th>last_update</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
@@ -232,7 +231,6 @@
        "      <td>2005</td>\n",
        "      <td>05</td>\n",
        "      <td>26</td>\n",
-       "      <td>2006-02-15 21:30:53</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
@@ -246,7 +244,6 @@
        "      <td>2005</td>\n",
        "      <td>05</td>\n",
        "      <td>28</td>\n",
-       "      <td>2006-02-15 21:30:53</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
@@ -260,7 +257,6 @@
        "      <td>2005</td>\n",
        "      <td>06</td>\n",
        "      <td>01</td>\n",
-       "      <td>2006-02-15 21:30:53</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
@@ -274,7 +270,6 @@
        "      <td>2005</td>\n",
        "      <td>06</td>\n",
        "      <td>03</td>\n",
-       "      <td>2006-02-15 21:30:53</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
@@ -288,7 +283,6 @@
        "      <td>2005</td>\n",
        "      <td>06</td>\n",
        "      <td>02</td>\n",
-       "      <td>2006-02-15 21:30:53</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -302,12 +296,12 @@
        "3          4        2005           05         24          2452          333   \n",
        "4          5        2005           05         24          2079          222   \n",
        "\n",
-       "   staff_id return_year return_month return_day          last_update  \n",
-       "0         1        2005           05         26  2006-02-15 21:30:53  \n",
-       "1         1        2005           05         28  2006-02-15 21:30:53  \n",
-       "2         1        2005           06         01  2006-02-15 21:30:53  \n",
-       "3         2        2005           06         03  2006-02-15 21:30:53  \n",
-       "4         1        2005           06         02  2006-02-15 21:30:53  "
+       "   staff_id return_year return_month return_day  \n",
+       "0         1        2005           05         26  \n",
+       "1         1        2005           05         28  \n",
+       "2         1        2005           06         01  \n",
+       "3         2        2005           06         03  \n",
+       "4         1        2005           06         02  "
       ]
      },
      "execution_count": 6,
@@ -320,8 +314,181 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "65d3bdce",
+   "metadata": {},
+   "source": [
+    "Reseteamos el ínfice de inventory_id para hacerlo coincidir con el resto de índices (0:1000). Se realiza tras comprobar que cada valor del inventario es único y por tanto puede ser substituido."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "id": "2beb18c2",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "1000"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "len(df.inventory_id.unique())"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 7,
+   "id": "fda8c74f",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df.inventory_id = range(1,1001)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "id": "fbc0a07d",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>rental_id</th>\n",
+       "      <th>rental_year</th>\n",
+       "      <th>rental_month</th>\n",
+       "      <th>rental_day</th>\n",
+       "      <th>inventory_id</th>\n",
+       "      <th>customer_id</th>\n",
+       "      <th>staff_id</th>\n",
+       "      <th>return_year</th>\n",
+       "      <th>return_month</th>\n",
+       "      <th>return_day</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>1</td>\n",
+       "      <td>2005</td>\n",
+       "      <td>05</td>\n",
+       "      <td>24</td>\n",
+       "      <td>1</td>\n",
+       "      <td>130</td>\n",
+       "      <td>1</td>\n",
+       "      <td>2005</td>\n",
+       "      <td>05</td>\n",
+       "      <td>26</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>2</td>\n",
+       "      <td>2005</td>\n",
+       "      <td>05</td>\n",
+       "      <td>24</td>\n",
+       "      <td>2</td>\n",
+       "      <td>459</td>\n",
+       "      <td>1</td>\n",
+       "      <td>2005</td>\n",
+       "      <td>05</td>\n",
+       "      <td>28</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>3</td>\n",
+       "      <td>2005</td>\n",
+       "      <td>05</td>\n",
+       "      <td>24</td>\n",
+       "      <td>3</td>\n",
+       "      <td>408</td>\n",
+       "      <td>1</td>\n",
+       "      <td>2005</td>\n",
+       "      <td>06</td>\n",
+       "      <td>01</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>4</td>\n",
+       "      <td>2005</td>\n",
+       "      <td>05</td>\n",
+       "      <td>24</td>\n",
+       "      <td>4</td>\n",
+       "      <td>333</td>\n",
+       "      <td>2</td>\n",
+       "      <td>2005</td>\n",
+       "      <td>06</td>\n",
+       "      <td>03</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>5</td>\n",
+       "      <td>2005</td>\n",
+       "      <td>05</td>\n",
+       "      <td>24</td>\n",
+       "      <td>5</td>\n",
+       "      <td>222</td>\n",
+       "      <td>1</td>\n",
+       "      <td>2005</td>\n",
+       "      <td>06</td>\n",
+       "      <td>02</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   rental_id rental_year rental_month rental_day  inventory_id  customer_id  \\\n",
+       "0          1        2005           05         24             1          130   \n",
+       "1          2        2005           05         24             2          459   \n",
+       "2          3        2005           05         24             3          408   \n",
+       "3          4        2005           05         24             4          333   \n",
+       "4          5        2005           05         24             5          222   \n",
+       "\n",
+       "   staff_id return_year return_month return_day  \n",
+       "0         1        2005           05         26  \n",
+       "1         1        2005           05         28  \n",
+       "2         1        2005           06         01  \n",
+       "3         2        2005           06         03  \n",
+       "4         1        2005           06         02  "
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
    "id": "3d7a8aac",
    "metadata": {},
    "outputs": [],
