--- a/cleaning_notebooks/2_clean_film.ipynb
+++ b/cleaning_notebooks/2_clean_film.ipynb
@@ -44,7 +44,9 @@
     "\n",
     "5. [Separación de la columna 'special_features', buscando la creación de nuevas columnas con valores booleanos](#id5)\n",
     "\n",
-    "6. [Eliminación de la columna 'last_update' dedido a que únicamente contiene un valor](#id6)"
+    "6. [Eliminación de la columna 'last_update' dedido a que únicamente contiene un valor](#id6)\n",
+    "\n",
+    "7. [Acortamiento de la descripción del filme](#id7)"
    ]
   },
   {
@@ -533,178 +535,6 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
-   "id": "f1b75a76",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>film_id</th>\n",
-       "      <th>title</th>\n",
-       "      <th>description</th>\n",
-       "      <th>adquisition_year</th>\n",
-       "      <th>language_id</th>\n",
-       "      <th>rental_duration</th>\n",
-       "      <th>rental_rate</th>\n",
-       "      <th>length</th>\n",
-       "      <th>replacement_cost</th>\n",
-       "      <th>rating</th>\n",
-       "      <th>trailer</th>\n",
-       "      <th>commentaries</th>\n",
-       "      <th>behind_scenes</th>\n",
-       "      <th>deleted_scenes</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>1</td>\n",
-       "      <td>Academy Dinosaur</td>\n",
-       "      <td>A Epic Drama of a Feminist And a Mad Scientist...</td>\n",
-       "      <td>2006</td>\n",
-       "      <td>1</td>\n",
-       "      <td>6</td>\n",
-       "      <td>0.99</td>\n",
-       "      <td>86</td>\n",
-       "      <td>20.99</td>\n",
-       "      <td>PG</td>\n",
-       "      <td>False</td>\n",
-       "      <td>False</td>\n",
-       "      <td>True</td>\n",
-       "      <td>True</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>2</td>\n",
-       "      <td>Ace Goldfinger</td>\n",
-       "      <td>A Astounding Epistle of a Database Administrat...</td>\n",
-       "      <td>2006</td>\n",
-       "      <td>1</td>\n",
-       "      <td>3</td>\n",
-       "      <td>4.99</td>\n",
-       "      <td>48</td>\n",
-       "      <td>12.99</td>\n",
-       "      <td>G</td>\n",
-       "      <td>True</td>\n",
-       "      <td>False</td>\n",
-       "      <td>False</td>\n",
-       "      <td>True</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>3</td>\n",
-       "      <td>Adaptation Holes</td>\n",
-       "      <td>A Astounding Reflection of a Lumberjack And a ...</td>\n",
-       "      <td>2006</td>\n",
-       "      <td>1</td>\n",
-       "      <td>7</td>\n",
-       "      <td>2.99</td>\n",
-       "      <td>50</td>\n",
-       "      <td>18.99</td>\n",
-       "      <td>NC-17</td>\n",
-       "      <td>True</td>\n",
-       "      <td>False</td>\n",
-       "      <td>False</td>\n",
-       "      <td>True</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>4</td>\n",
-       "      <td>Affair Prejudice</td>\n",
-       "      <td>A Fanciful Documentary of a Frisbee And a Lumb...</td>\n",
-       "      <td>2006</td>\n",
-       "      <td>1</td>\n",
-       "      <td>5</td>\n",
-       "      <td>2.99</td>\n",
-       "      <td>117</td>\n",
-       "      <td>26.99</td>\n",
-       "      <td>G</td>\n",
-       "      <td>False</td>\n",
-       "      <td>True</td>\n",
-       "      <td>True</td>\n",
-       "      <td>False</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>5</td>\n",
-       "      <td>African Egg</td>\n",
-       "      <td>A Fast-Paced Documentary of a Pastry Chef And ...</td>\n",
-       "      <td>2006</td>\n",
-       "      <td>1</td>\n",
-       "      <td>6</td>\n",
-       "      <td>2.99</td>\n",
-       "      <td>130</td>\n",
-       "      <td>22.99</td>\n",
-       "      <td>G</td>\n",
-       "      <td>False</td>\n",
-       "      <td>False</td>\n",
-       "      <td>False</td>\n",
-       "      <td>True</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "   film_id             title  \\\n",
-       "0        1  Academy Dinosaur   \n",
-       "1        2    Ace Goldfinger   \n",
-       "2        3  Adaptation Holes   \n",
-       "3        4  Affair Prejudice   \n",
-       "4        5       African Egg   \n",
-       "\n",
-       "                                         description  adquisition_year  \\\n",
-       "0  A Epic Drama of a Feminist And a Mad Scientist...              2006   \n",
-       "1  A Astounding Epistle of a Database Administrat...              2006   \n",
-       "2  A Astounding Reflection of a Lumberjack And a ...              2006   \n",
-       "3  A Fanciful Documentary of a Frisbee And a Lumb...              2006   \n",
-       "4  A Fast-Paced Documentary of a Pastry Chef And ...              2006   \n",
-       "\n",
-       "   language_id  rental_duration  rental_rate  length  replacement_cost rating  \\\n",
-       "0            1                6         0.99      86             20.99     PG   \n",
-       "1            1                3         4.99      48             12.99      G   \n",
-       "2            1                7         2.99      50             18.99  NC-17   \n",
-       "3            1                5         2.99     117             26.99      G   \n",
-       "4            1                6         2.99     130             22.99      G   \n",
-       "\n",
-       "   trailer  commentaries  behind_scenes  deleted_scenes  \n",
-       "0    False         False           True            True  \n",
-       "1     True         False          False            True  \n",
-       "2     True         False          False            True  \n",
-       "3    False          True           True           False  \n",
-       "4    False         False          False            True  "
-      ]
-     },
-     "execution_count": 14,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "df.head()"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 9,
    "id": "3cf34b91",
    "metadata": {},
@@ -743,189 +573,32 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "id": "1e718d01",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>film_id</th>\n",
-       "      <th>title</th>\n",
-       "      <th>description</th>\n",
-       "      <th>adquisition_year</th>\n",
-       "      <th>language_id</th>\n",
-       "      <th>rental_duration</th>\n",
-       "      <th>rental_rate</th>\n",
-       "      <th>length</th>\n",
-       "      <th>replacement_cost</th>\n",
-       "      <th>rating</th>\n",
-       "      <th>last_update</th>\n",
-       "      <th>trailer</th>\n",
-       "      <th>commentaries</th>\n",
-       "      <th>behind_scenes</th>\n",
-       "      <th>deleted_scenes</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>1</td>\n",
-       "      <td>Academy Dinosaur</td>\n",
-       "      <td>A Epic Drama of a Feminist And a Mad Scientist...</td>\n",
-       "      <td>2006</td>\n",
-       "      <td>1</td>\n",
-       "      <td>6</td>\n",
-       "      <td>0.99</td>\n",
-       "      <td>86</td>\n",
-       "      <td>20.99</td>\n",
-       "      <td>PG</td>\n",
-       "      <td>2006-02-15 05:03:42</td>\n",
-       "      <td>False</td>\n",
-       "      <td>False</td>\n",
-       "      <td>True</td>\n",
-       "      <td>True</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>2</td>\n",
-       "      <td>Ace Goldfinger</td>\n",
-       "      <td>A Astounding Epistle of a Database Administrat...</td>\n",
-       "      <td>2006</td>\n",
-       "      <td>1</td>\n",
-       "      <td>3</td>\n",
-       "      <td>4.99</td>\n",
-       "      <td>48</td>\n",
-       "      <td>12.99</td>\n",
-       "      <td>G</td>\n",
-       "      <td>2006-02-15 05:03:42</td>\n",
-       "      <td>True</td>\n",
-       "      <td>False</td>\n",
-       "      <td>False</td>\n",
-       "      <td>True</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>3</td>\n",
-       "      <td>Adaptation Holes</td>\n",
-       "      <td>A Astounding Reflection of a Lumberjack And a ...</td>\n",
-       "      <td>2006</td>\n",
-       "      <td>1</td>\n",
-       "      <td>7</td>\n",
-       "      <td>2.99</td>\n",
-       "      <td>50</td>\n",
-       "      <td>18.99</td>\n",
-       "      <td>NC-17</td>\n",
-       "      <td>2006-02-15 05:03:42</td>\n",
-       "      <td>True</td>\n",
-       "      <td>False</td>\n",
-       "      <td>False</td>\n",
-       "      <td>True</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>4</td>\n",
-       "      <td>Affair Prejudice</td>\n",
-       "      <td>A Fanciful Documentary of a Frisbee And a Lumb...</td>\n",
-       "      <td>2006</td>\n",
-       "      <td>1</td>\n",
-       "      <td>5</td>\n",
-       "      <td>2.99</td>\n",
-       "      <td>117</td>\n",
-       "      <td>26.99</td>\n",
-       "      <td>G</td>\n",
-       "      <td>2006-02-15 05:03:42</td>\n",
-       "      <td>False</td>\n",
-       "      <td>True</td>\n",
-       "      <td>True</td>\n",
-       "      <td>False</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>5</td>\n",
-       "      <td>African Egg</td>\n",
-       "      <td>A Fast-Paced Documentary of a Pastry Chef And ...</td>\n",
-       "      <td>2006</td>\n",
-       "      <td>1</td>\n",
-       "      <td>6</td>\n",
-       "      <td>2.99</td>\n",
-       "      <td>130</td>\n",
-       "      <td>22.99</td>\n",
-       "      <td>G</td>\n",
-       "      <td>2006-02-15 05:03:42</td>\n",
-       "      <td>False</td>\n",
-       "      <td>False</td>\n",
-       "      <td>False</td>\n",
-       "      <td>True</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "   film_id             title  \\\n",
-       "0        1  Academy Dinosaur   \n",
-       "1        2    Ace Goldfinger   \n",
-       "2        3  Adaptation Holes   \n",
-       "3        4  Affair Prejudice   \n",
-       "4        5       African Egg   \n",
-       "\n",
-       "                                         description  adquisition_year  \\\n",
-       "0  A Epic Drama of a Feminist And a Mad Scientist...              2006   \n",
-       "1  A Astounding Epistle of a Database Administrat...              2006   \n",
-       "2  A Astounding Reflection of a Lumberjack And a ...              2006   \n",
-       "3  A Fanciful Documentary of a Frisbee And a Lumb...              2006   \n",
-       "4  A Fast-Paced Documentary of a Pastry Chef And ...              2006   \n",
-       "\n",
-       "   language_id  rental_duration  rental_rate  length  replacement_cost rating  \\\n",
-       "0            1                6         0.99      86             20.99     PG   \n",
-       "1            1                3         4.99      48             12.99      G   \n",
-       "2            1                7         2.99      50             18.99  NC-17   \n",
-       "3            1                5         2.99     117             26.99      G   \n",
-       "4            1                6         2.99     130             22.99      G   \n",
-       "\n",
-       "           last_update  trailer  commentaries  behind_scenes  deleted_scenes  \n",
-       "0  2006-02-15 05:03:42    False         False           True            True  \n",
-       "1  2006-02-15 05:03:42     True         False          False            True  \n",
-       "2  2006-02-15 05:03:42     True         False          False            True  \n",
-       "3  2006-02-15 05:03:42    False          True           True           False  \n",
-       "4  2006-02-15 05:03:42    False         False          False            True  "
-      ]
-     },
-     "execution_count": 11,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "df.head()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 12,
    "id": "1f0fa8bd",
    "metadata": {},
    "outputs": [],
    "source": [
     "df = df.drop('last_update', axis=1)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "99ba37ec",
+   "metadata": {},
+   "source": [
+    "<div id='id7' />\n",
+    "\n",
+    "# 7. Limpieza 'description'"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "id": "a3b400f1",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#Aplicamos la función size guardada en '../functions/clean_functions.py'\n",
+    "df.description = df.description.apply(size)"
    ]
   },
   {
