--- a/cleaning_notebooks/3_clean_inv_lan_old.ipynb
+++ b/cleaning_notebooks/3_clean_inv_lan_old.ipynb
@@ -347,6 +347,16 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 8,
+   "id": "f6c72f1e",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df2 = df2.drop('last_update', axis=1)"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "id": "c8d6cf35",
    "metadata": {},
@@ -356,7 +366,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "id": "8cade00a",
    "metadata": {},
    "outputs": [],
@@ -376,7 +386,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 10,
    "id": "ec3a1084",
    "metadata": {},
    "outputs": [
@@ -462,7 +472,7 @@
        "4   PENELOPE   GUINESS          CHEAPER CLYDE          2006           14"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -474,7 +484,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 11,
    "id": "46f15c2d",
    "metadata": {},
    "outputs": [],
@@ -485,7 +495,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 12,
    "id": "887f22b1",
    "metadata": {},
    "outputs": [],
@@ -496,7 +506,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 13,
    "id": "bf0a4654",
    "metadata": {},
    "outputs": [],
